Redirecionando as imagens

--- a/pages/noticias/noticias.html
+++ b/pages/noticias/noticias.html
@@ -2,7 +2,7 @@
   <article class="noticia-card">
     <img
       class="noticia-img"
-      src="../assets/imgs/noticia-cards/narcos1.jpg"
+      src="../../assets/imgs/noticia-cards/narcos1.jpg"
       alt=""
     />
     <div class="noticia-text">
