--- a/pages/teatro/teatro.html
+++ b/pages/teatro/teatro.html
@@ -70,7 +70,7 @@
 				<button><a href="https://bileto.sympla.com.br/event/93011/d/251005?_gl=1*kjr3ql*_gcl_au*MzE2NDgyNDQyLjE3MTc1MDE4NTU.*_ga*MTA1NDg4ODQ3My4xNzE3NTAxODU1*_ga_KXH10SQTZF*MTcxODcxMDIyMi40LjEuMTcxODcxMDU2MS4xNS4wLjE1MjY1Njc0NDg.">Ver Mais</a></button>
             </div>
             <div class="movie lightspecial">
-                <img src="../../assets/imgs/teatro/poster12.jpeg.jpg" alt="Poster da peça">
+                <img src="../../assets/imgs/teatro/poster12.jpeg" alt="Poster da peça">
                 <h3>Menina Mojubá</h3>
                 <p>Uma criança brasileira cresce nas ruas e descobre carregar consigo uma força ancestral. Se torna uma pombagira após seu trágico falecimento, tornando-se uma figura poderosa no mundo espiritual, capaz de proteger e livrar todos que tenham caminhos semelhantes aos seus.</p>
 				<button><a href="https://www.sympla.com.br/evento/menina-mojuba-no-teatro-dulcina/2475577">Ver Mais</a></button>
